# dropprivs

./: CMakeLists.txt  README.md  config.h.in  package.sh
src/: main.c
